chore: move to simplified structure
